# visuell

./: .gitignore
DIP1/: main.py
DIP2/: main.py  tasks.py  utils.py
DIP3/: main.py  tasks.py  utils.py
Project/: image3_output.kappa  main.py
Project/dip/: main.py
Project/graphics/: FinalProject.sln
Project/graphics/FinalProject/: FinalProject.vcxproj  FinalProject.vcxproj.filters  bufferData.h  glCheckerBoard.cpp  glCheckerBoard.h  glCheckerPiece.cpp  glCheckerPiece.h  glProject.cpp  glProject.h  kappaFileHandler.cpp  kappaFileHandler.h  main.cpp  shader.cpp  shader.h
VisuellLab1/src/: visuals.cpp
VisuellLab2/: CMakeLists.txt
VisuellLab2/src/: main.cpp  shader.cpp  visuals.cpp
VisuellLab3/include/: visuals.hpp
VisuellLab3/src/: main.cpp  shader.cpp  visuals.cpp
VisuellLab4/inc/: visuals.hpp
VisuellLab4/src/: main.cpp  shader.cpp  visuals.cpp
lab1/: CMakeLists.txt
lab1/src/: main.cpp
lab2/src/: shader.cpp  visuals.cpp
